# vectorprogramming

./: .gitignore  README.md  sourceme.sh
benchmarks-paper/binomial/: README.md  inputs  plot_baseline  xlabel
benchmarks-paper/binomial/Accelerate/: Binom.hs  Main.hs  binomial-accelerate.cabal  run.sh
benchmarks-paper/binomial/C/: BinomEur  BinomEur.c  Makefile  run.sh
benchmarks-paper/binomial/Copperhead/: Binomial.py  Main.py  run.sh
benchmarks-paper/binomial/HaskellLists/: Binomial.hs  Options.hs  bin.cl
benchmarks-paper/binomial/Nesl/: binomial.nesl
benchmarks-paper/binomial/Nikola/: Implementation.hs  Main.hs  Nikola.hs  Options.hs  binomial-nikola.cabal  run.sh
benchmarks-paper/blackscholes/: README.md
benchmarks-paper/sobol-pi/: README.md  inputs
benchmarks-paper/sobol-pi/HaskellLists/: Main.hs  Sobol.hs  sobol-pi-haskelllists.cabal
benchmarks/binomial/: README.md
benchmarks/binomial-cpu/: README.md  inputs
benchmarks/binomial-cpu/C/: AmrPut  AmrPut.c  Main.hs  Makefile  benchmark-binomial-cpu-C.cabal  benchmark-binomial-cpu-C.hp  run.sh
benchmarks/binomial-cpu/R/: Main.hs  benchmark-binomial-cpu-R.cabal  run.sh
benchmarks/binomial-cpu/Repa/: Main.hs  benchmark-binomial-cpu-Repa.cabal  binomial-repa.cabal  run.sh
benchmarks/binomial-cpu/Vector/: Main.hs  benchmark-binomial-cpu-Vector.cabal  binomial-vector.cabal  run.sh
benchmarks/binomial-gpu/: inputs
benchmarks/binomial-gpu/Accelerate/: American.hs  ArmPutAcc2.hs  Main.hs  benchmark-binomial-gpu-Accelerate.cabal  binomial-accelerate.cabal  run.sh
benchmarks/binomial-gpu/Nikola/: American.hs  Main.hs  MainPrecompiled.hs  MainRuntimeCompiled.hs  benchmark-binomial-gpu-Nikola.cabal  binomial-Nikola.cabal  run.sh
benchmarks/binomial-gpu/Nikola/American/: Implementation.hs
benchmarks/binomial-gpu/Nikola2/: Main.hs  binomial-nikola2.cabal  finalPut-hand-simplified.cu  prevPut-hand-simplified.cu
benchmarks/binomial-gpu/Nikola2/American/: Nikola.hs  Vector.hs
benchmarks/binomial-gpu/Nikola2/American/Nikola/: Implementation.hs
benchmarks/binomial-portfolio-cpu/: README.md  inputs
benchmarks/binomial-portfolio-cpu/Vector/: Main.hs  binomial-vector.cabal  run.sh
benchmarks/binomial/CUDA/: Main.hs
benchmarks/binomial_cpu/CPP/: Main.hs  Makefile  benchmark-binomial-CPP.cabal
benchmarks/binomial_gpu/Accelerate/: benchmark-binomial-Accelerate.cabal
benchmarks/empty/Haskell/: Main.hs  empty-haskell.cabal  setup.sh
benchmarks/lsm-cpu/: inputs
benchmarks/lsm-cpu/Repa-N1/: LinAlgTest.hs  lsm-repa.cabal  run.sh
benchmarks/lsm-cpu/Vector/: LSM.hs  LinAlg.hs  LinAlgTest.hs  Main.hs  Random.hs  graph.r  lsm-vector.cabal  paths1.csv  run.sh
benchmarks/sobol/: inputs
benchmarks/sobol-cpu/: inputs
benchmarks/sobol-cpu/Repa/: Main.hs  Sobol.hs  Unfold.hs  run.sh  sobol-repa.cabal
benchmarks/sobol-cpu/Repa unfoldFillChunkedP/: Main.hs  sobol-repa.cabal
benchmarks/sobol/Accelerate2/: Main.hs  Sobol.hs  benchmark-sobol-Accelerate2.cabal  run.sh  sobol-accelerate2.cabal
benchmarks/sobol/CUDA/: Main.hs  SobolQRNG  benchmark-sobol-CUDA.cabal
benchmarks/sobol/CUDA/src-cpp/: Makefile  sobol.cpp  sobol_gpu.cu
benchmarks/sobol/Nikola/: Main.hs  run.sh  sobol-nikola1.cabal  temp.cu
benchmarks/sobol/Nikola2/: Main.hs  Sobol.hs  benchmark-sobol-Nikola2.cabal  hand-simplified-CUDA.cu  sobol-nikola2.cabal
benchmarks/sobol/Vector/: Main.hs  Sobol.hs  benchmark-sobol-Vector.cabal  run.sh  sobol-vector.cabal
benchmarks/tfp-pi/: direction_vectors
benchmarks/tfp-pi/Nikola/: Pi.hs  tfp-pi-nikola.cabal
experiments/Nikola-mvec/: Main.hs  binomial-nikola-mvec.cabal
experiments/cps/: ContPlay.hs
experiments/divergence-avoidance/: README.md
experiments/lexifi/: README.md
experiments/lsm/: README.md
experiments/md-sequential/: Deconstrain.hs  HOAS.hs  Misc.hs  Untyped.hs
experiments/nikola-experiments/: README.md
experiments/sequentialM/: SeqM.hs
experiments/sobol/: inputs
experiments/sobol/Accelerate/: Main.hs  Sobol.hs  benchmark-sobol-Accelerate.cabal
experiments/toy-sequential/: .exrc  DeBruijn.hs  SynSeq.hs  ToySequential.hs  UntypedSeq.hs
experiments/vectorisation/: HuttonsEDSL.hs  README.md
literature/surveying/: links.md
playground/: HuttonsEDSL.hs  bdiv-example.c  gaussian.c  gaussian.hs
results/binomial/: Nikola-Uncompiled.csv
scripts/: cabaldepends.hs  hi.sh  install-hsenv  revdep.sh  ssh-napoleon.ssh
surveying/: ggplot.r  napoleon-env.sh  plot.r  rebuildTestRoutine.sh  run.sh
surveying/accelerate/: installation.md
surveying/benchmarks/binomial/Repa/: benchmark-binomial-Repa.cabal
surveying/benchmarks/binomial/Vector/: benchmark-binomial-Vector.cabal
surveying/binomial/: Main.hs  ggplot.r  rebuildTestRoutine.sh  run.sh  samples.tpl
surveying/binomial/Instances/Accelerate/: American.hs  Main.hs  binomialbenchmark-Accelerate.cabal
surveying/binomial/Instances/Nikola/: .gitignore  American.hs  Main.hs  MainPrecompiled.hs  MainRuntimeCompiled.hs  Nikola.cabal  binomialbenchmark-Nikola.cabal
surveying/binomial/Instances/Nikola/American/: Implementation.hs  Model.hs
surveying/feldspar/: installation.md
surveytools/: survey
surveytools/benchmarkrunner/: Main.hs  benchmarkrunner.cabal  plc-laptop-env.sh  rebuildBenchmarkRunner.sh  rebuildTestRoutine.sh  run.sh
surveytools/benchmarkrunner/BenchmarkRunner/: External.hs  Main.hs
surveytools/plotting/: ggplot_speedup.r  plotlib.r
surveytools/setup/: install-hsenv  shakeAccelerateGithub.hs  shakeNikola.hs
tex/bibliography/: bibliography.bib
tex/defence-martin/: .gitignore  chronology.sty  texput.tex
tex/fhcp2013/: fhcp2013.tex
tex/fhpc2013/: fhpc2013.tex
tex/plc-defense/: defense.tex
tex/report/: .gitignore  Disposition.md  Shake.hs  abstract.txt  appendix.tex  cases.tex  conclusion.tex  defaultprelude.tex  finance.tex  gpgpu.tex  hardware.tex  intro.tex  master.tex  nikola.tex  ourwork.tex  preface.tex  survey.tex  todostate.tex
tex/synopsis/: master.tex  prelude.tex
tex/tfp2013/: tfp2013.tex
utils/: install-hsenv  shakeAccelerateGithub.hs  sortversions.hs  sshconfig
(+479 files in other folders)
