name:                benchmarkrunner
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Philip Carlsen, Martin Dybdal
maintainer:          plcplc@gmail.com dybber@dybber.dk
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     BenchmarkRunner.Main, BenchmarkRunner.External
  -- other-modules:
  build-depends:       base, criterion, process, filepath
