name:                benchmark-binomial-cpu-C
version:             0.1.0.0
author:              Philip Carlsen, Martin Dybdal
maintainer:          plcplc@gmail.com, dybber@dybber.dk
build-type:          Simple
cabal-version:       >=1.8

executable benchmark-binomial-cpu-C
  main-is:             Main.hs
  build-depends:       base, benchmarkrunner, process
  ghc-options: -rtsopts -threaded -fllvm -optlo-O3