name:                benchmark-binomial-cpu-R
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Philip Carlsen, Martin Dybdal
maintainer:          plcplc@gmail.com, dybber@dybber.dk
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

executable benchmark-binomial-cpu-R
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base, benchmarkrunner
  ghc-options: -rtsopts -threaded -fllvm -optlo-O3