name:                benchmark-binomial-cpu-Repa
version:             0.1.0.0
author:              Martin Dybdal
maintainer:          dybber@dybber.dk
build-type:          Simple
cabal-version:       >=1.8

executable benchmark-binomial-cpu-Repa
  build-depends:       base, repa ==3.2.*, benchmarkrunner, mtl
  main-is: Main.hs
  ghc-options: -rtsopts -threaded -optlo-O3 -fllvm
