name:                benchmark-binomial-gpu-Nikola
version:             0.1.0.0
author:              Philip Carlsen, Martin Dybdal
build-type:          Simple
cabal-version:       >=1.8

executable benchmark-binomial-gpu-Nikola
  -- NikolaBinomial
  main-is: Main.hs
  -- other-modules:
  build-depends:       base, nikola, vector, benchmarkrunner
  ghc-options: -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3 -fllvm

-- executable NikolaPrecompiledBinomial
--  main-is: MainPrecompiled.hs
--  -- other-modules:
--  build-depends:       base, nikola, vector, binomialbenchmark
