name:                binomial-nikola2
version:             0.1.0.0
author:              Philip Carlsen, Martin Dybdal
build-type:          Simple
cabal-version:       >=1.8

executable binomial-nikola2
  main-is: Main.hs
  build-depends:       base, nikola, vector
  ghc-options: -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3 -fllvm
