name:                benchmark-binomial-CPP
version:             0.1.0.0
license-file:        LICENSE
author:              Philip Carlsen, Martin Dybdal
maintainer:          plcplc@gmail.com, dybber@dybber.dk
build-type:          Simple
cabal-version:       >=1.8

executable benchmark-binomial-CPP
  main-is:             Main.hs
  build-depends:       base, benchmarkrunner, process
  ghc-options: -rtsopts -threaded -fllvm -optlo-O3