name:                empty-haskell
version:             0.1.0.0
license:             BSD3
author:              Philip Carlsen, Martin Dybdal
maintainer:          plcplc@gmail.com, dybber@dybber.dk
build-type:          Simple
cabal-version:       >=1.8

executable empty
  main-is: Main.hs
  build-depends:       base
  ghc-options: -threaded -optlo-O3 -fllvm
