name:                sobol-nikola1
version:             0.1.0.0
license:             BSD3
author:              Philip Carlsen, Martin Dybdal
maintainer:          plcplc@gmail.com, dybber@dybber.dk
build-type:          Simple
cabal-version:       >=1.8


executable sobol-nikola1
  main-is:       Main.hs
  build-depends: base, nikola, vector
  ghc-options:   -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3 -fllvm
