name:                sobol-vector
version:             0.1.0.0
license:             BSD3
author:              Philip Carlsen, Martin Dybdal
maintainer:          plcplc@gmail.com, dybber@dybber.dk
build-type:          Simple
cabal-version:       >=1.8

executable sobol-vector
  main-is:       Main.hs
  build-depends: base, vector
  ghc-options:   -threaded -optlo-O3 -fllvm
