name:                benchmark-binomial-Repa
version:             0.1.0.0
author:              Martin Dybdal
maintainer:          dybber@dybber.dk
build-type:          Simple
cabal-version:       >=1.8

executable benchmark-binomial-Repa
  build-depends:       base ==4.5.*, repa ==3.2.*, benchmarkrunner, mtl
  main-is: Main.hs
  ghc-options: -rtsopts -threaded -optlo-O3 -fllvm
