name:                binomialbenchmark-Accelerate
version:             0.1.0.0
author:              Martin Dybdal, Ken Friis Larsen
build-type:          Simple
cabal-version:       >=1.8

executable binomialbenchmark-Accelerate
  main-is: Main.hs
  build-depends:       base, accelerate, accelerate-io, vector, binomialbenchmark
