name:                NikolaBinomial
version:             0.1.0.0
author:              Philip Carlsen, Martin Dybdal
build-type:          Simple
cabal-version:       >=1.8

executable NikolaBinomial
  main-is: Main.hs
  -- other-modules:
  build-depends:       base, nikola, vector, carlsen-dybdal-binomialtest
